[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wavtokenizer"
description = "SOTA discrete acoustic codec models with 40 tokens per second for audio language modeling"
version = "0.0.3"
dependencies = [
    "transformers",
    "torch >= 2.1.0",
    "accelerate >= 0.26.1",
    "opencv-python",
    "pandas",
    "sentencepiece",
    "torchaudio",
    "torchvision",
    "hydra-core >= 1.3.2",
    "soundfile",
    "python-speech-features",
    "scipy",
    "protobuf",
    "npy-append-array",
    "scikit-learn",
    "joblib",
    "wandb >= 0.16.3",
    "pip >= 24.0",
    "einops >= 0.7.0",
    "torchmetrics >= 1.3.1",
    "deepspeed >= 0.13.4",
    "librosa >= 0.10.1",
    "calflops >= 0.2.9",
    "jiwer >= 3.0.3",
    "datasets",
    "hf-transfer",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}
